--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,70 +1,39 @@
-<!-- Nav : -->
-<nav class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
-    {{pathPrefix}}/book.html
-    <a href="./html/book.html"> Book </a>
-    <a href="{{pathPrefix}}/book.html"> Book Dynamic </a>
-
-    <div class="wrap-collapsible">
-        <input id="collapsible-1" class="collapsible-toggle" type="checkbox" />
-        <label for="collapsible-1" class="collapsible-toggle-label">Projects</label>
-        <div class="collapsible-content">
-            <div class="collapsible-content-inner">
-                <ul>
-                    <li>
-                        <a href="./html/projects/project1.html" alt="Project 1">
-                            <div class="rounded-md px-4 py-2 hover:bg-gray-300">Project 1</div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{{ pathPrefix }}/projects/project2.html" alt="Project 2"
-                            ><div class="rounded-md px-4 py-2 hover:bg-gray-300">{{ pathPrefix }}/projects/project2.html</div></a
-                        >
-                    </li>
-                    <li>
-                        <a href="{{ pathPrefix }}/projects/project3.html" alt="Project 3"
-                            ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Project 3</div></a
-                        >
-                    </li>
-                    <li>
-                        <a href="{{ pathPrefix }}/projects/project4.html" alt="Project 4"
-                            ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Project 4</div></a
-                        >
-                    </li>
-                </ul>
+<div class="relative">
+    <div class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
+        <a href="{{ pathNavPrefix }}/project.html" alt="Project"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Project</div></a>
+        <div class="wrap-collapsible">
+            <input id="collapsible-2" class="collapsible-toggle" type="checkbox" />
+            <label for="collapsible-2" class="collapsible-toggle-label">Interviews</label>
+            <div class="collapsible-content">
+                <div class="collapsible-content-inner">
+                    <ul>
+                        <li>
+                            <a href="{{ pathNavPrefix }}/interviews/interview1.html" alt="David Micoud"
+                                ><div class="rounded-md px-4 py-2 hover:bg-gray-300">David Micoud</div></a
+                            >
+                        </li>
+                        <li>
+                            <a href="{{ pathNavPrefix }}/interviews/interview2.html" alt="Interview 2"
+                                ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 2</div></a
+                            >
+                        </li>
+                        <li>
+                            <a href="{{ pathNavPrefix }}/interviews/interview3.html" alt="Interview 3"
+                                ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 3</div></a
+                            >
+                        </li>
+                        <li>
+                            <a href="{{ pathNavPrefix }}/interviews/interview4.html" alt="Interview 4"
+                                ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 4</div></a
+                            >
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
+        <a href="{{ pathNavPrefix }}/about.html" alt="About"><div class="rounded-md px-4 py-2 hover:bg-gray-300">About</div></a>
+        <a href="{{ pathNavPrefix }}/book.html" alt="Book"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Book</div></a>
+        <a href="{{ pathNavPrefix }}/exhibits.html" alt="Exhibits"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Exhibits</div></a>
     </div>
-    <div class="wrap-collapsible">
-        <input id="collapsible-2" class="collapsible-toggle" type="checkbox" />
-        <label for="collapsible-2" class="collapsible-toggle-label">Interviews</label>
-        <div class="collapsible-content">
-            <div class="collapsible-content-inner">
-                <ul>
-                    <li>
-                        <a href="{{ pathPrefix }}/interviews/interview1.html" alt="Interview 1"
-                            ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 1</div></a
-                        >
-                    </li>
-                    <li>
-                        <a href="{{ pathPrefix }}/interviews/interview2.html" alt="Interview 2"
-                            ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 2</div></a
-                        >
-                    </li>
-                    <li>
-                        <a href="{{ pathPrefix }}/interviews/interview3.html" alt="Interview 3"
-                            ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 3</div></a
-                        >
-                    </li>
-                    <li>
-                        <a href="{{ pathPrefix }}/interviews/interview4.html" alt="Interview 4"
-                            ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 4</div></a
-                        >
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <a href="{{pathPrefix}}/book.html" alt="Book"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Book</div></a>
-    <a href="{{ pathPrefix }}/exhibit.html" alt="Exhibits"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Exhibit</div></a>
-    <a href="{{ pathPrefix }}/about.html" alt="About"><div class="rounded-md px-4 py-2 hover:bg-gray-300">About</div></a>
-</nav>
+    <div class="pointer-events-none absolute top-0 h-full w-full border-y-2 border-gray-700" />
+</div>
