--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,6 +1,8 @@
 <div class="relative">
     <div class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
-        <a href="{{ pathNavPrefix }}/project.html" alt="Project"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Project</div></a>
+        <a href="{{ pathNavPrefix }}/project.html" alt="Project"
+            ><div class="rounded-md px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Project</div></a
+        >
         <div class="wrap-collapsible">
             <input id="collapsible-2" class="collapsible-toggle" type="checkbox" />
             <label for="collapsible-2" class="collapsible-toggle-label">Interviews</label>
@@ -9,31 +11,45 @@
                     <ul>
                         <li>
                             <a href="{{ pathNavPrefix }}/interviews/interview1.html" alt="David Micoud"
-                                ><div class="rounded-md px-4 py-2 hover:bg-gray-300">David Micoud</div></a
+                                ><div class="rounded-md px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300">
+                                    David Micoud 1
+                                </div></a
                             >
                         </li>
                         <li>
                             <a href="{{ pathNavPrefix }}/interviews/interview2.html" alt="Interview 2"
-                                ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 2</div></a
+                                ><div class="rounded-md px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300">
+                                    David Micoud 2
+                                </div></a
                             >
                         </li>
                         <li>
                             <a href="{{ pathNavPrefix }}/interviews/interview3.html" alt="Interview 3"
-                                ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 3</div></a
+                                ><div class="rounded-md px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300">
+                                    Interview 3
+                                </div></a
                             >
                         </li>
                         <li>
                             <a href="{{ pathNavPrefix }}/interviews/interview4.html" alt="Interview 4"
-                                ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 4</div></a
+                                ><div class="rounded-md px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300">
+                                    Interview 4
+                                </div></a
                             >
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-        <a href="{{ pathNavPrefix }}/about.html" alt="About"><div class="rounded-md px-4 py-2 hover:bg-gray-300">About</div></a>
-        <a href="{{ pathNavPrefix }}/book.html" alt="Book"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Book</div></a>
-        <a href="{{ pathNavPrefix }}/exhibits.html" alt="Exhibits"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Exhibits</div></a>
+        <a href="{{ pathNavPrefix }}/about.html" alt="About"
+            ><div class="rounded-md px-4 py-2 transition-colors ease-linear hover:bg-gray-300">About</div></a
+        >
+        <a href="{{ pathNavPrefix }}/book.html" alt="Book"
+            ><div class="rounded-md px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Book</div></a
+        >
+        <a href="{{ pathNavPrefix }}/exhibits.html" alt="Exhibits"
+            ><div class="rounded-md px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Exhibits</div></a
+        >
     </div>
     <div class="pointer-events-none absolute top-0 h-full w-full border-y-2 border-gray-700" />
 </div>
