--- a/src/partials/nav_header.html
+++ b/src/partials/nav_header.html
@@ -2,7 +2,7 @@
     <div class="absolute left-0 right-0 top-0 text-center font-sans text-8xl font-bold uppercase text-red-100">Brotherland</div>
     <div class="h-full py-6">
         <nav>
-            <include src="./partials/nav.html" locals='{"pathNavPrefix": "{{ pathPrefix }}"}'></include>
+            <include src="./partials/nav.html" locals='{"pathNavPrefix": "{{ pathPrefix }}", "active": "{{ active }}"}'></include>
         </nav>
     </div>
 </div>
