--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,55 +1,87 @@
 <div class="relative">
     <div class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
-        <a href="{{ pathNavPrefix }}/project.html" alt="Project"
-            ><div class="rounded-md px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Project</div></a
-        >
-        <div class="wrap-collapsible">
-            <input id="collapsible-2" class="collapsible-toggle" type="checkbox" />
-            <label for="collapsible-2" class="collapsible-toggle-label">Interviews</label>
-            <div class="collapsible-content">
-                <div class="collapsible-content-inner">
+        <a href="{{ pathNavPrefix }}/project.html" alt="Project">
+            <div
+                class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 {{ active === 'project' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+            >
+                Project
+            </div>
+        </a>
+        <!-- <if condition="active === 'index'"> {{ active }} </if> -->
+        <div class="group z-10">
+            <input id="collapsible-interviews" class="hidden" type="checkbox" />
+            <label
+                for="collapsible-interviews"
+                class="block max-h-fit cursor-pointer rounded-t-sm rounded-b-none px-4 py-2 text-center font-playfair-display text-2xl font-medium uppercase group-hover:bg-gray-300 z-0 {{ active.includes('interview')  ? 'bg-gray-600/75 text-gray-100' : '' }}"
+            >
+                Interviews
+            </label>
+            <div
+                class="absolute max-h-0 overflow-hidden rounded-b-md bg-slate-100 transition-[max-height] duration-300 ease-in-out hover:z-50 group-hover:max-h-screen"
+            >
+                <div class="rounded-b-md bg-slate-100 pt-1">
                     <ul>
                         <li>
-                            <a href="{{ pathNavPrefix }}/interviews/interview1.html" alt="David Micoud"
-                                ><div class="rounded-md px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300">
+                            <a href="{{ pathNavPrefix }}/interviews/interview1.html" alt="David Micoud">
+                                <div
+                                    class="rounded-sm px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'interview1' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                >
                                     David Micoud 1
-                                </div></a
-                            >
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="{{ pathNavPrefix }}/interviews/interview2.html" alt="Interview 2"
-                                ><div class="rounded-md px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300">
+                            <a href="{{ pathNavPrefix }}/interviews/interview2.html" alt="David Micoud 2">
+                                <div
+                                    class="rounded-sm px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'interview2' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                >
                                     David Micoud 2
-                                </div></a
-                            >
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="{{ pathNavPrefix }}/interviews/interview3.html" alt="Interview 3"
-                                ><div class="rounded-md px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300">
+                            <a href="{{ pathNavPrefix }}/interviews/interview3.html" alt="Interview 3">
+                                <div
+                                    class="rounded-sm px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'interview3' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                >
                                     Interview 3
-                                </div></a
-                            >
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="{{ pathNavPrefix }}/interviews/interview4.html" alt="Interview 4"
-                                ><div class="rounded-md px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300">
+                            <a href="{{ pathNavPrefix }}/interviews/interview4.html" alt="Interview 4">
+                                <div
+                                    class="rounded-sm px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'interview4' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                >
                                     Interview 4
-                                </div></a
-                            >
+                                </div>
+                            </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-        <a href="{{ pathNavPrefix }}/about.html" alt="About"
-            ><div class="rounded-md px-4 py-2 transition-colors ease-linear hover:bg-gray-300">About</div></a
-        >
-        <a href="{{ pathNavPrefix }}/book.html" alt="Book"
-            ><div class="rounded-md px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Book</div></a
-        >
-        <a href="{{ pathNavPrefix }}/exhibits.html" alt="Exhibits"
-            ><div class="rounded-md px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Exhibits</div></a
-        >
+        <a href="{{ pathNavPrefix }}/about.html" alt="About">
+            <div
+                class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 {{ active === 'about' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+            >
+                About
+            </div>
+        </a>
+        <a href="{{ pathNavPrefix }}/book.html" alt="Book">
+            <div
+                class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 {{ active === 'book' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+            >
+                Book
+            </div>
+        </a>
+        <a href="{{ pathNavPrefix }}/exhibits.html" alt="Exhibits">
+            <div
+                class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 {{ active === 'exhibits' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+            >
+                Exhibits
+            </div>
+        </a>
     </div>
-    <div class="pointer-events-none absolute top-0 h-full w-full border-y-2 border-gray-700" />
+    <div class="pointer-events-none absolute top-0 z-20 h-full w-full border-y-2 border-gray-700" />
 </div>
