--- a/src/partials/interv_img.html
+++ b/src/partials/interv_img.html
@@ -1,4 +1,4 @@
-<div class="relative flex basis-8/12 flex-col justify-end pl-8">
-    <img class="interview-image h-full rounded-md object-cover" src="{{ filePath }}" />
-    <span class="absolute -bottom-4 self-end text-xs">{{ caption }}</span>
+<div class="relative flex h-max basis-2/3 flex-col justify-end mt-1 pl-8">
+    <img class="interview-image rounded-md object-contain object-top" src="{{ filePath }}" />
+    <span class="absolute -bottom-4 self-end font-crimson-text text-xs font-normal text-gray-800">{{ caption }}</span>
 </div>
