--- a/src/partials/interv_text.html
+++ b/src/partials/interv_text.html
@@ -1,11 +1,18 @@
-<div class="">
-    <each loop="item, index in main">
-        <p class="font-crimson-text font-semibold text-gray-950">{{ item }}</p>
-    </each>
+<div class="flex flex-col items-center justify-between">
+    <div>
+        <each loop="item, index in main">
+            <p class="font-crimson-text text-lg font-semibold tracking-tight text-gray-950">{{ item }}</p>
+        </each>
+    </div>
+    <br />
+
+    <!-- Audio -->
+    <include src="./partials/interv_audio.html" locals='{"audioFilePath": "{{ audioFilePath }}", "title": "{{ title }}"}'> </include>
+
     <br />
     <a
         href="{{ authorLink }}"
-        class="rounded-sm bg-gray-800 p-1 font-crimson-text font-semibold text-gray-100 hover:bg-gray-500 hover:text-gray-800"
+        class="w-max justify-self-end rounded-sm bg-gray-800 p-1 font-crimson-text font-semibold text-gray-100 hover:bg-gray-500 hover:text-gray-800"
     >
         {{ author }}
     </a>
