--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -12,7 +12,7 @@
             <input id="collapsible-interviews" class="hidden" type="checkbox" />
             <label
                 for="collapsible-interviews"
-                class="block max-h-fit cursor-pointer rounded-t-sm rounded-b-none px-4 py-2 text-center font-playfair-display text-2xl font-medium uppercase group-hover:bg-gray-300 z-0 {{ active.includes('interview')  ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                class="block max-h-fit cursor-pointer rounded-t-sm rounded-b-none px-4 py-2 text-center font-playfair-display text-2xl font-medium uppercase group-hover:bg-gray-300 z-0 {{ active.includes('intrvw_')  ? 'bg-gray-600/75 text-gray-100' : '' }}"
             >
                 Interviews
             </label>
@@ -22,38 +22,38 @@
                 <div class="rounded-b-md bg-slate-100 pt-1">
                     <ul>
                         <li>
-                            <a href="{{ pathNavPrefix }}/interviews/interview1.html" alt="David Micoud">
+                            <a href="{{ pathNavPrefix }}/interviews/intrvw_dm01.html" alt="David Micoud">
                                 <div
-                                    class="rounded-sm px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'interview1' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                    class="rounded-sm px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_dm01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                                 >
                                     David Micoud 1
                                 </div>
                             </a>
                         </li>
                         <li>
-                            <a href="{{ pathNavPrefix }}/interviews/interview2.html" alt="David Micoud 2">
+                            <a href="{{ pathNavPrefix }}/interviews/intrvw_dm02.html" alt="David Micoud 2">
                                 <div
-                                    class="rounded-sm px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'interview2' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                    class="rounded-sm px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_dm02' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                                 >
                                     David Micoud 2
                                 </div>
                             </a>
                         </li>
                         <li>
-                            <a href="{{ pathNavPrefix }}/interviews/interview3.html" alt="Interview 3">
+                            <a href="{{ pathNavPrefix }}/interviews/intrvw_ia01.html" alt="Ibraimo Alberto 1">
                                 <div
-                                    class="rounded-sm px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'interview3' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                    class="rounded-sm px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ia01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                                 >
-                                    Interview 3
+                                    Ibraimo Alberto 1
                                 </div>
                             </a>
                         </li>
                         <li>
-                            <a href="{{ pathNavPrefix }}/interviews/interview4.html" alt="Interview 4">
+                            <a href="{{ pathNavPrefix }}/interviews/intrvw_ia02.html" alt="Ibraimo Alberto 2">
                                 <div
-                                    class="rounded-sm px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'interview4' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                    class="rounded-sm px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ia02' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                                 >
-                                    Interview 4
+                                    Ibraimo Alberto 2
                                 </div>
                             </a>
                         </li>
