--- a/src/partials/interv_quote.html
+++ b/src/partials/interv_quote.html
@@ -12,7 +12,7 @@
         />
     </svg>
     <!-- TODO Errors out on some kind of dark mode switcher -->
-    <p class="self-center px-6">{{ quote }}</p>
+    <p class="self-center px-6">{{ title }}</p>
     <div class="rotate-180">
         <svg
             aria-hidden="true"
