--- a/src/partials/interv_quote.html
+++ b/src/partials/interv_quote.html
@@ -1,4 +1,4 @@
-<blockquote class="flex flex-col justify-evenly mb-12 w-max self-start align-middle text-xl font-semibold italic text-gray-900 dark:text-white">
+<blockquote class="flex flex-col justify-evenly mb-8 w-max self-start align-middle text-xl font-semibold italic text-gray-900 dark:text-white">
     <svg
         aria-hidden="true"
         class="h-6 w-6 self-start text-gray-400 dark:text-gray-600"
@@ -12,7 +12,7 @@
         />
     </svg>
     <!-- TODO Errors out on some kind of dark mode switcher -->
-    <p class="self-center px-6">{{ title }}</p>
+    <p class="self-center px-6 font-glegoo">{{ title }}</p>
     <div class="rotate-180">
         <svg
             aria-hidden="true"
