--- a/src/partials/interv_audio.html
+++ b/src/partials/interv_audio.html
@@ -1,4 +1,4 @@
-<audio controls class="w-3/4">
+<audio controls class="w-full">
     <source src="{{ audioFilePath }}" type="audio/mpeg" title="{{ title }}" />
     Your system can't play audio, it seems!
 </audio>
