--- a/src/partials/interv_img.html
+++ b/src/partials/interv_img.html
@@ -1,4 +1,4 @@
-<div class="relative flex h-max basis-1/2 flex-col justify-end mt-1 pl-8">
-    <img class="interview-image rounded-md object-contain object-top" src="{{ imageFilePath }}" />
-    <span class="absolute -bottom-4 self-end font-crimson-text text-xs font-normal text-gray-800">{{ imageCaption }}</span>
+<div class="relative h-full">
+    <img class="interview-image h-full rounded-sm object-top object-fill" src="{{ imageFilePath }}" />
+    <span class="absolute -bottom-4 right-0 self-end font-crimson-text text-xs font-normal text-gray-800">{{ imageCaption }}</span>
 </div>
