--- a/src/css/main.css
+++ b/src/css/main.css
@@ -68,12 +68,12 @@
 }
 
 main {
-    @apply sm:w-full px-2 md:w-4/5 lg:w-2/3 xl:w-3/5 text-gray-900
+    @apply sm:w-full px-2 md:w-5/6 lg:w-3/4 xl:w-2/3 2xl:w-3/5 text-gray-900
 }
 
-.cursor-ve {
+/* .cursor-ve {
     @apply cursor-[url(../../public/images/75.jpg),_pointer];
-}
+} */
 
 p {
     @apply mb-4;
