--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -2,4 +2,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="{{ pathHeadPrefix }}css/main.css" />
 <title>{{pageTitle}}</title>
-<script src="{{ pathHeadPrefix }}js/script.js"></script>
+<script src="{{ pathHeadPrefix }}js/script.js" type="module"></script>
