--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
 @font-face {
     font-family: "Playfair Display";
@@ -67,8 +72,9 @@
         U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+
 main {
-    @apply sm:w-full px-2 md:w-5/6 lg:w-3/4 xl:w-2/3 2xl:w-3/5 text-gray-900
+    @apply sm:w-full mx-auto px-2 md:w-5/6 lg:w-3/4 xl:w-2/3 2xl:w-3/5 text-gray-900
 }
 
 /* .cursor-ve {
