--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,33 +1,43 @@
 <div class="relative h-full w-full">
-    <div class="absolute left-0 -z-30 top-0 w-full flex flex-nowrap justify-start">
+    <div class="absolute left-0 top-0 -z-30 flex w-full flex-nowrap justify-start">
         <div class="md:w-[5%] lg:w-[8.33%] xl:w-[10%]"></div>
-        <span class="font-sans text-8xl font-bold uppercase text-gray-200">Brotherland</span>
+        <span class="font-roboto text-2xl text-[13vw] font-bold uppercase leading-none text-gray-200 md:text-8xl">Brotherland</span>
+        <!-- 
+        <span
+            class="font-roboto text-[5vw] font-bold uppercase leading-none text-gray-200 md:text-[4vw] lg:text-[6vw] xl:text-[3vw] 2xl:text-[6vw]"
+            >Brotherland</span
+        > -->
     </div>
-    <div class="h-full py-6 z-10">
+    <div class="z-10 h-full py-6">
         <div class="h-full w-full border-y-2 border-gray-700 bg-gray-300 bg-opacity-0">
-            <nav class="sm:w-full md:w-4/5 lg:w-2/3 xl:w-3/5 m-auto">
-                <div class="flex justify-between font-playfair-display text-xl font-semibold">
+            <nav class="m-auto sm:w-full md:w-4/5 lg:w-2/3 xl:w-3/5">
+                <div class="flex justify-between font-playfair-display text-2xl font-bold">
                     <a href="{{ pathPrefix }}/project.html" alt="Project">
                         <div
-                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'project' ? 'bg-gray-600/75 text-gray-100' : '' }}">
-                            Project
+                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'project' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                        >
+                            Projekt
                         </div>
                     </a>
                     <!-- <if condition="active === 'index'"> {{ active }} </if> -->
                     <div class="group z-20">
                         <input id="collapsible-interviews" class="hidden" type="checkbox" />
-                        <label for="collapsible-interviews"
-                            class="block max-h-fit cursor-pointer rounded-t-sm rounded-b-none -mx-4 px-4  py-2 text-center font-playfair-display  text-red-800 text-xl font-semibold group-hover:bg-gray-300 z-0 {{ active.includes('intrvw_')  ? 'bg-gray-600/75 text-gray-100' : '' }}">
+                        <label
+                            for="collapsible-interviews"
+                            class="block max-h-fit cursor-pointer rounded-t-sm rounded-b-none -mx-4 px-4  py-2 text-center font-playfair-display  text-red-800 group-hover:bg-gray-300 z-0 {{ active.includes('intrvw_')  ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                        >
                             Interviews
                         </label>
                         <div
-                            class="absolute max-h-0 overflow-hidden rounded-b-md bg-slate-100 transition-[max-height] duration-300 ease-in-out hover:z-50 group-hover:max-h-screen">
+                            class="absolute max-h-0 overflow-hidden rounded-b-md bg-slate-100 transition-[max-height] duration-300 ease-in-out hover:z-50 group-hover:max-h-screen"
+                        >
                             <div class="rounded-b-md bg-slate-100 pt-1">
                                 <ul>
                                     <li>
                                         <a href="{{ pathPrefix }}/interviews/intrvw_dm01.html" alt="David Macou 1">
                                             <div
-                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_dm01' ? 'bg-gray-600/75 text-gray-100' : '' }}">
+                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_dm01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                            >
                                                 David Macou 1
                                             </div>
                                         </a>
@@ -35,7 +45,8 @@
                                     <li>
                                         <a href="{{ pathPrefix }}/interviews/intrvw_dm02.html" alt="David Macou 2">
                                             <div
-                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_dm02' ? 'bg-gray-600/75 text-gray-100' : '' }}">
+                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_dm02' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                            >
                                                 David Macou 2
                                             </div>
                                         </a>
@@ -43,7 +54,8 @@
                                     <li>
                                         <a href="{{ pathPrefix }}/interviews/intrvw_ia01.html" alt="Ibraimo Alberto 1">
                                             <div
-                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ia01' ? 'bg-gray-600/75 text-gray-100' : '' }}">
+                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ia01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                            >
                                                 Ibraimo Alberto 1
                                             </div>
                                         </a>
@@ -51,16 +63,17 @@
                                     <li>
                                         <a href="{{ pathPrefix }}/interviews/intrvw_ia02.html" alt="Ibraimo Alberto 2">
                                             <div
-                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ia02' ? 'bg-gray-600/75 text-gray-100' : '' }}">
+                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ia02' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                            >
                                                 Ibraimo Alberto 2
                                             </div>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="{{ pathPrefix }}/interviews/intrvw_ls01.html"
-                                            alt="Lan und Huu Loi Bin Seifert">
+                                        <a href="{{ pathPrefix }}/interviews/intrvw_ls01.html" alt="Lan und Huu Loi Bin Seifert">
                                             <div
-                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ls01' ? 'bg-gray-600/75 text-gray-100' : '' }}">
+                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ls01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                            >
                                                 Lan und Huu Loi Bin Seifert
                                             </div>
                                         </a>
@@ -71,20 +84,23 @@
                     </div>
                     <a href="{{ pathPrefix }}/exhibits.html" alt="Exhibits">
                         <div
-                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'exhibits' ? 'bg-gray-600/75 text-gray-100' : '' }}">
-                            Exhibits
+                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'exhibits' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                        >
+                            Ausstellungen
                         </div>
                     </a>
                     <a href="{{ pathPrefix }}/book.html" alt="Book">
                         <div
-                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'book' ? 'bg-gray-600/75 text-gray-100' : '' }}">
-                            Book
+                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'book' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                        >
+                            Buch
                         </div>
                     </a>
                     <a href="{{ pathPrefix }}/about.html" alt="About">
                         <div
-                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'about' ? 'bg-gray-600/75 text-gray-100' : '' }}">
-                            About
+                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'about' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                        >
+                            Über Uns
                         </div>
                     </a>
                 </div>
