--- a/src/partials/interv_img.html
+++ b/src/partials/interv_img.html
@@ -1,4 +1,4 @@
 <div class="relative h-full">
-    <img class="interview-image h-full rounded-sm object-top object-fill" src="{{ imageFilePath }}" />
+    <img class="interview-image w-full rounded-sm object-top object-fill" src="{{ imageFilePath }}" />
     <span class="absolute -bottom-4 right-0 self-end font-crimson-text text-xs font-normal text-gray-800">{{ imageCaption }}</span>
 </div>
