--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -2,11 +2,6 @@
     <div class="absolute left-0 top-0 -z-30 flex w-full flex-nowrap justify-start">
         <div class="md:w-[5%] lg:w-[8.33%] xl:w-[10%]"></div>
         <span class="font-roboto text-2xl text-[13vw] font-bold uppercase leading-none text-gray-200 md:text-8xl">Brotherland</span>
-        <!-- 
-        <span
-            class="font-roboto text-[5vw] font-bold uppercase leading-none text-gray-200 md:text-[4vw] lg:text-[6vw] xl:text-[3vw] 2xl:text-[6vw]"
-            >Brotherland</span
-        > -->
     </div>
     <div class="z-10 h-full py-6">
         <div class="h-full w-full border-y-2 border-gray-700 bg-gray-300 bg-opacity-0">
@@ -19,8 +14,17 @@
                             Projekt
                         </div>
                     </a>
+
+                    <a href="{{ pathPrefix }}/interviews/intrvw_ajm01.html" alt="Interviews">
+                        <div
+                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'interviews' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                        >
+                            Interviews
+                        </div>
+                    </a>
+
                     <!-- <if condition="active === 'index'"> {{ active }} </if> -->
-                    <div class="group z-20">
+                    <!-- <div class="group z-20">
                         <input id="collapsible-interviews" class="hidden" type="checkbox" />
                         <label
                             for="collapsible-interviews"
@@ -81,7 +85,8 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
+
                     <a href="{{ pathPrefix }}/exhibits.html" alt="Exhibits">
                         <div
                             class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'exhibits' ? 'bg-gray-600/75 text-gray-100' : '' }}"
@@ -89,6 +94,7 @@
                             Ausstellungen
                         </div>
                     </a>
+
                     <a href="{{ pathPrefix }}/book.html" alt="Book">
                         <div
                             class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'book' ? 'bg-gray-600/75 text-gray-100' : '' }}"
@@ -96,6 +102,7 @@
                             Buch
                         </div>
                     </a>
+
                     <a href="{{ pathPrefix }}/about.html" alt="About">
                         <div
                             class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'about' ? 'bg-gray-600/75 text-gray-100' : '' }}"
