--- a/src/partials/interview_audio.html
+++ b/src/partials/interview_audio.html
@@ -1,4 +1,4 @@
-<div class="mt-4 flex w-4/5 rounded-sm bg-gray-900 px-2 py-4">
+<div class="flex w-full rounded-sm bg-gray-900 px-2 py-4">
     <audio controls class="w-full">
         <source src="{{ audioFilePath }}" type="audio/mpeg" title="{{ title }}" />
         Your system can't play audio, it seems!
