--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,19 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,700&display=swap");
 @import "../../node_modules/simplelightbox/dist/simple-lightbox.css";
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@font-face {
-    font-family: "Playfair Display";
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/playfairdisplay/v30/nuFvD-vYSZviVYUb_rj3ij__anPXJzDwcbmjWBN2PKdFvXDXbtM.woff2) format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
-        U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
 
 /* Crimson-Text instead of Minion Pro: */
 @font-face {
@@ -62,6 +52,10 @@
 
 main {
     @apply mx-auto px-2 pt-16 text-gray-900 sm:w-full md:w-5/6 lg:w-3/4 xl:w-2/3 2xl:w-3/5;
+}
+
+a {
+    @apply hover:text-red-800/90
 }
 
 .cursor-ve {
