--- a/src/partials/interview_quote.html
+++ b/src/partials/interview_quote.html
@@ -12,7 +12,7 @@
         />
     </svg>
     <!-- TODO Errors out on some kind of dark mode switcher -->
-    <p class="self-center px-6 font-glegoo">{{ title }}</p>
+    <p class="self-center px-6 text-3xl font-crimson-text">{{ title }}</p>
     <div class="rotate-180">
         <svg
             aria-hidden="true"
