--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,15 +1,15 @@
 <div class="relative h-full w-full">
     <div class="absolute left-0 top-0 -z-30 flex w-full flex-nowrap justify-start">
         <div class="md:w-[5%] lg:w-[8.33%] xl:w-[10%]"></div>
-        <span class="font-roboto tracking-tighter text-2xl text-[13vw] uppercase leading-none text-gray-200 md:text-8xl">Brotherland</span>
+        <span class="font-roboto tracking-tight text-[13vw] uppercase leading-none text-gray-200 md:text-8xl">Brotherland</span>
     </div>
-    <div class="z-10 h-full py-6">
+    <div class="z-10 h-full py-7">
         <div class="h-full w-full border-y-2 border-gray-700 bg-gray-300 bg-opacity-0">
             <nav class="m-auto sm:w-full md:w-4/5 lg:w-2/3 xl:w-3/5">
                 <div class="flex justify-between font-crimson-text tracking-tight text-2xl font-bold">
                     <a href="{{ pathPrefix }}/project.html" alt="Project">
                         <div
-                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'project' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                            class="-mx-4 px-4 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'project' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                         >
                             Projekt
                         </div>
@@ -17,7 +17,7 @@
 
                     <a href="{{ pathPrefix }}/interviews/intrvw_ajm01.html" alt="Interviews">
                         <div
-                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active.includes('intrvw') ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                            class="-mx-4 px-4 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active.includes('intrvw') ? 'bg-gray-600/75 text-gray-100' : '' }}"
                         >
                             Interviews
                         </div>
@@ -28,7 +28,7 @@
                         <input id="collapsible-interviews" class="hidden" type="checkbox" />
                         <label
                             for="collapsible-interviews"
-                            class="block max-h-fit cursor-pointer rounded-t-sm rounded-b-none -mx-4 px-4  py-2 text-center font-playfair-display  text-red-800 group-hover:bg-gray-300 z-0 {{ active.includes('intrvw_')  ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                            class="block max-h-fit cursor-pointer rounded-t-sm rounded-b-none -mx-4 px-4  text-center font-playfair-display  text-red-800 group-hover:bg-gray-300 z-0 {{ active.includes('intrvw_')  ? 'bg-gray-600/75 text-gray-100' : '' }}"
                         >
                             Interviews
                         </label>
@@ -40,7 +40,7 @@
                                     <li>
                                         <a href="{{ pathPrefix }}/interviews/intrvw_dm01.html" alt="David Macou 1">
                                             <div
-                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_dm01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                                class="-mx-4 px-4 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_dm01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                                             >
                                                 David Macou 1
                                             </div>
@@ -49,7 +49,7 @@
                                     <li>
                                         <a href="{{ pathPrefix }}/interviews/intrvw_dm02.html" alt="David Macou 2">
                                             <div
-                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_dm02' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                                class="-mx-4 px-4 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_dm02' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                                             >
                                                 David Macou 2
                                             </div>
@@ -58,7 +58,7 @@
                                     <li>
                                         <a href="{{ pathPrefix }}/interviews/intrvw_ia01.html" alt="Ibraimo Alberto 1">
                                             <div
-                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ia01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                                class="-mx-4 px-4 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ia01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                                             >
                                                 Ibraimo Alberto 1
                                             </div>
@@ -67,7 +67,7 @@
                                     <li>
                                         <a href="{{ pathPrefix }}/interviews/intrvw_ia02.html" alt="Ibraimo Alberto 2">
                                             <div
-                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ia02' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                                class="-mx-4 px-4 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ia02' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                                             >
                                                 Ibraimo Alberto 2
                                             </div>
@@ -76,7 +76,7 @@
                                     <li>
                                         <a href="{{ pathPrefix }}/interviews/intrvw_ls01.html" alt="Lan und Huu Loi Bin Seifert">
                                             <div
-                                                class="-mx-4 px-4 py-2 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ls01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                                                class="-mx-4 px-4 text-lg transition-colors ease-linear hover:bg-gray-300 {{ active === 'intrvw_ls01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                                             >
                                                 Lan und Huu Loi Bin Seifert
                                             </div>
@@ -89,7 +89,7 @@
 
                     <a href="{{ pathPrefix }}/exhibits.html" alt="Exhibits">
                         <div
-                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'exhibits' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                            class="-mx-4 px-4 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'exhibits' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                         >
                             Ausstellungen
                         </div>
@@ -97,7 +97,7 @@
 
                     <a href="{{ pathPrefix }}/book.html" alt="Book">
                         <div
-                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'book' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                            class="-mx-4 px-4 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'book' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                         >
                             Buch
                         </div>
@@ -105,7 +105,7 @@
 
                     <a href="{{ pathPrefix }}/about.html" alt="About">
                         <div
-                            class="-mx-4 px-4 py-2 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'about' ? 'bg-gray-600/75 text-gray-100' : '' }}"
+                            class="-mx-4 px-4 transition-colors ease-linear hover:bg-gray-300  text-red-800 {{ active === 'about' ? 'bg-gray-600/75 text-gray-100' : '' }}"
                         >
                             Über Uns
                         </div>
