--- a/src/partials/interview_text.html
+++ b/src/partials/interview_text.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-between">
+<div class="flex flex-col items-start justify-between">
     <div class="mt-10">
         <each loop="item, index in main">
             <p class="font-crimson-text text-lg font-semibold text-gray-950">{{ item }}</p>
@@ -8,7 +8,7 @@
 
     <a
         href="{{ authorLink }}"
-        class="w-max justify-self-end rounded-sm bg-gray-200 p-1 px-2 font-crimson-text font-semibold text-red-800 hover:bg-red-800 hover:text-gray-200"
+        class="w-max justify-self-end rounded-sm  font-crimson-text font-semibold"
     >
         {{ author }}
     </a>
